# internal/pkg/models/med-card.go
@@ -1,6 +1,13 @@
 package models
 
-type Profile struct {
+type SexType string
+
+const (
+	MaleSex  SexType = "M"
+	WomanSex SexType = "W"
+)
+
+type MedCard struct {
 	Id              uint32  `json:"id" gorm:"primaryKey"`
 	UserId          uint32  `json:"userId"`
 	FirstName       string  `json:"firstName"`
